# pov-db

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-ec2.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: pool.py  repository.py
app/etl/: pipeline.py
app/services/: cache.py  calculations.py  corporate_actions.py  factory.py  forward_factors.py  live.py  s3_dump.py
app/sources/: __init__.py  bhavcopy.py  dhan.py  (+12 more)
scripts/: apply_schema_updates.py  backfill_corporate_action_metrics.py  backfill_forward_factors.py  bootstrap_history.py  bootstrap_history.sh  daily_update.py  deploy_prod.sh  deploy_server.sh  export_postgres_dump.sh  fix_interest_rates.py  import_bootstrap_errors.py  initialize_market_data.py  install_daily_etl_cron.sh  live_snapshot_worker.py  load_events.py  populate_trading_calendar.py  recompute_analytics.py  recompute_option_volume.py  recompute_rsi_metrics.py  recompute_straddle_pnl.py  recompute_symbol_aggregates.py  refresh_symbol_universe.py  run_pipeline.py  setup_nginx.sh  setup_server.sh  sync_corporate_actions.py  update_result_events.py  validate_database.py  validate_market_data.py
sql/: 001_schema.sql
tests/: test_cache.py  test_calculations.py  test_corporate_actions.py  test_dashboard_route.py  test_dhan_live.py  test_forward_factors.py  test_kite_live.py  test_main.py  test_nse_option_chain.py  test_parsers.py  test_volatility_cone_route.py  test_yahoo_events.py  test_yahoo_quotes.py
(+11 files in other folders)
